Revised scripts [MRB]

--- a/misc/scripts/xmlformat.conf
+++ b/misc/scripts/xmlformat.conf
@@ -6,7 +6,7 @@
 # xmlformat documentation can be found at 
 # http://www.kitebird.com/software/xmlformat/xmlformat.html
 
-# Block level elements (these elements contain only element content)
+# Block elements; these elements begin on a new line, and contain only element content (block elements and inline elements)
 AUTHORSUMMARY CHRONPROSE CHRONSTRUCT DATAITEM DATASTRUCT DIV0 DIV1 DIV2 DIV3 HEADING P SHORTPROSE TEXTSCOPE BIOGRAPHY WRITING PRODUCTION RECEPTION TEXTUALFEATURES BIRTH DEATH CULTURALFORMATION PERSONNAME EDUCATION FAMILY FRIENDSASSOCIATES HEALTH INTIMATERELATIONSHIPS LEISUREANDSOCIETY LOCATION POLITICS OCCUPATION OTHERLIFEEVENT VIOLENCE WEALTH
   format		block
   entry-break	1
@@ -16,7 +16,7 @@ AUTHORSUMMARY CHRONPROSE CHRONSTRUCT DATAITEM DATASTRUCT DIV0 DIV1 DIV2 DIV3 HEA
   normalize		no
   wrap-length   0
 
-# Block level elements (mixed content elements -- these elements contain both element content and text content)
+# Block elements; these mixed content elements begin on a new line, and contain both element content (block elements and inline elements) and text content
 CLASSISSUE NATIONALITYISSUE RACEANDETHNICITY RELIGION SEXUALITY CORR MARRIAGE MARRIED MEMBER RELIGIOUSNAME ROYAL STYLED SURNAME TITLED
   format		block
   entry-break	1
@@ -26,6 +26,6 @@ CLASSISSUE NATIONALITYISSUE RACEANDETHNICITY RELIGION SEXUALITY CORR MARRIAGE MA
   normalize     no
   wrap-length   0
 
-# Inline elements
+# Inline elements; these elements do not begin on a new line, and contain only text content or other inline element content -- normalization and line-wrapping of inline elements and content is derived from the parent block element
 ADDRESS ADDRLINE AREA AWARD BIBCIT BIBCITS BIRTHNAME BIRTHPOSITION CAUSE CHILDLESSNESS CHILDREN CLASS COMPANION CONTESTEDBEHAVIOUR DATE DAY DEGREE DENOMINATION DIVORCE EMPH EMPLOYER ETHNICITY EXTENTOFOEUVRE FOREIGN GENERICRANGE GEOG GEOGHERITAGE GIVEN HEAD INDEXED INSTRUCTOR JOB KEYWORDCLASS L LANGUAGE LB LG LIVESWITH MONTH NAME NATIONALHERITAGE NATIONALITY NICKNAME OCCASION ORGNAME PADVERTISING PANTHOLOGIZATION PARCHIVALLOCATION PATTITUDES PAUTHORSHIP PCIRCULATION PCONTRACT PCOPYRIGHT PDEDICATION PEARNINGS PEDITIONS PFIRSTLITERARYACTIVITY PINFLUENCESHER PLACE PLACENAME PLASTLITERARYACTIVITY PLITERARYSCHOOLS PMANUSCRIPTHISTORY PMATERIALCONDITIONS PMODEOFPUBLICATION PMOTIVES PNONBOOKMEDIA PNONSURVIVAL POLITICALAFFILIATION PPERFORMANCE PPERIODICALPUBLICATION PPLACEOFPUBLICATION PPRESSRUN PPRICE PRARITIESFEATURESDECORATIONS PRELATIONSWITHPUBLISHER PSERIALIZATION PSEUDONYM PSUBMISSIONSREJECTIONS PTYPEOFPRESS QUOTE RACECOLOUR RBESTKNOWNWORK RDESTRUCTIONOFWORK REGION REMUNERATION RFICTIONALIZATION RLANDMARKTEXT RPENALTIES RRECOGNITIONNAME RRECOGNITIONS RRECOGNITIONVALUE RRESPONSES RS RSELFDESCRIPTION RSHEINFLUENCED RWRITINGMILESTONE SCHOLARNOTE SCHOOL SEASON SELFCONSTRUCTED SEPARATION SETTLEMENT SEXUALIDENTITY SIC SIGNIFICANTACTIVITY SOCALLED SUBJECT TCHARACTERIZATION TCHARACTERNAME TCHARACTERTYPEROLE TEXT TGENRE TGENREISSUE TIME TINTERTEXTUALITY TITLE TMOTIF TOPIC TPLOT TSETTINGDATE TSETTINGPLACE TTECHNIQUES TTHEMETOPIC TTONESTYLE TVOICENARRATION WEEK XREF YEAR
   format		inline
