xmlformat.conf and xmllint.sh revisions[MRB]

--- a/misc/scripts/xmlformat.conf
+++ b/misc/scripts/xmlformat.conf
@@ -7,7 +7,7 @@
 # http://www.kitebird.com/software/xmlformat/xmlformat.html
 
 # Block elements; these elements begin on a new line, and contain only element content (block elements and inline elements)
-AUTHORSUMMARY CHRONPROSE CHRONSTRUCT DATAITEM DATASTRUCT DIV0 DIV1 DIV2 DIV3 HEADING P SHORTPROSE TEXTSCOPE BIOGRAPHY WRITING PRODUCTION RECEPTION TEXTUALFEATURES BIRTH DEATH CULTURALFORMATION PERSONNAME EDUCATION FAMILY FRIENDSASSOCIATES HEALTH INTIMATERELATIONSHIPS LEISUREANDSOCIETY LOCATION POLITICS OCCUPATION OTHERLIFEEVENT VIOLENCE WEALTH
+AUTHORSUMMARY BIBCITS CHRONSTRUCT DATAITEM DATASTRUCT DATESTRUCT DIV0 DIV1 DIV2 DIV3 SHORTPROSE TEXTSCOPE BIOGRAPHY WRITING PRODUCTION RECEPTION TEXTUALFEATURES BIRTH DEATH CULTURALFORMATION PERSONNAME EDUCATION FAMILY FRIENDSASSOCIATES HEALTH INTIMATERELATIONSHIPS LEISUREANDSOCIETY LOCATION MARRIAGE POLITICS OCCUPATION OTHERLIFEEVENT VIOLENCE WEALTH WORKSCITED ORLANDOHEADER FILEDESC TITLESTMT PUBLICATIONSTMT REVISIONDESC RESPONSIBILITY
   format		block
   entry-break	1
   exit-break	1
@@ -17,15 +17,31 @@ AUTHORSUMMARY CHRONPROSE CHRONSTRUCT DATAITEM DATASTRUCT DIV0 DIV1 DIV2 DIV3 HEA
   wrap-length   0
 
 # Block elements; these mixed content elements begin on a new line, and contain both element content (block elements and inline elements) and text content
-CLASSISSUE NATIONALITYISSUE RACEANDETHNICITY RELIGION SEXUALITY CORR MARRIAGE MARRIED MEMBER RELIGIOUSNAME ROYAL STYLED SURNAME TITLED
+CHRONPROSE CLASSISSUE CORR NATIONALITYISSUE P RACEANDETHNICITY RELIGION SEXUALITY MEMBER RELIGIOUSNAME ROYAL STYLED
   format		block
   entry-break	1
   exit-break	1
+  element-break	1
+  subindent     4
+  normalize     no
+  wrap-length   0
+
+# Inline elements; these heading or heading-like elements begin on a new line, and contain only text content (treated as block elements to properly configure output)
+AUTHORITY BIBCIT DOCTITLE HEADING ITEM SOURCE SOURCEDESC STANDARD
+  format		block
+  entry-break	1
+  exit-break	1
+  element-break	1
+  subindent		4
+  normalize		no
+  wrap-length   0
+
+# Inline elements; these elements do not begin on a new line, and contain only text content or other inline element content (treated as block elements to properly configure output)
+ADDRESS ADDRLINE AREA AWARD BIRTHNAME BIRTHPOSITION CAUSE CHILDLESSNESS CHILDREN CLASS COMPANION CONTESTEDBEHAVIOUR DATE DATERANGE DAY DEGREE DENOMINATION DIVORCE EMPH EMPLOYER ETHNICITY EXTENTOFOEUVRE FOREIGN GENERICRANGE GEOG GEOGHERITAGE GIVEN HEAD INDEXED INSTRUCTOR JOB KEYWORDCLASS L LANGUAGE LB LG LIVESWITH MARRIED MONTH NAME NATIONALHERITAGE NATIONALITY NICKNAME OCCASION ORGNAME PADVERTISING PANTHOLOGIZATION PARCHIVALLOCATION PATTITUDES PAUTHORSHIP PCIRCULATION PCONTRACT PCOPYRIGHT PDEDICATION PEARNINGS PEDITIONS PFIRSTLITERARYACTIVITY PINFLUENCESHER PLACE PLACENAME PLASTLITERARYACTIVITY PLITERARYSCHOOLS PMANUSCRIPTHISTORY PMATERIALCONDITIONS PMODEOFPUBLICATION PMOTIVES PNONBOOKMEDIA PNONSURVIVAL POLITICALAFFILIATION PPERFORMANCE PPERIODICALPUBLICATION PPLACEOFPUBLICATION PPRESSRUN PPRICE PRARITIESFEATURESDECORATIONS PRELATIONSWITHPUBLISHER PSERIALIZATION PSEUDONYM PSUBMISSIONSREJECTIONS PTYPEOFPRESS QUOTE RACECOLOUR RBESTKNOWNWORK RDESTRUCTIONOFWORK REGION REMUNERATION RESEARCHNOTE RFICTIONALIZATION RLANDMARKTEXT RPENALTIES RRECOGNITIONNAME RRECOGNITIONS RRECOGNITIONVALUE RRESPONSES RS RSELFDESCRIPTION RSHEINFLUENCED RWRITINGMILESTONE SCHOLARNOTE SCHOOL SEASON SELFCONSTRUCTED SEPARATION SETTLEMENT SEXUALIDENTITY SIC SIGNIFICANTACTIVITY SOCALLED SUBJECT SURNAME TCHARACTERIZATION TCHARACTERNAME TCHARACTERTYPEROLE TEXT TGENRE TGENREISSUE TIME TINTERTEXTUALITY TITLE TITLED TMOTIF TOPIC TPLOT TSETTINGDATE TSETTINGPLACE TTECHNIQUES TTHEMETOPIC TTONESTYLE TVOICENARRATION WEEK XREF YEAR
+  format		block
+  entry-break	0
+  exit-break	0
   element-break	0
   subindent     0
   normalize     no
   wrap-length   0
-
-# Inline elements; these elements do not begin on a new line, and contain only text content or other inline element content -- normalization and line-wrapping of inline elements and content is derived from the parent block element
-ADDRESS ADDRLINE AREA AWARD BIBCIT BIBCITS BIRTHNAME BIRTHPOSITION CAUSE CHILDLESSNESS CHILDREN CLASS COMPANION CONTESTEDBEHAVIOUR DATE DAY DEGREE DENOMINATION DIVORCE EMPH EMPLOYER ETHNICITY EXTENTOFOEUVRE FOREIGN GENERICRANGE GEOG GEOGHERITAGE GIVEN HEAD INDEXED INSTRUCTOR JOB KEYWORDCLASS L LANGUAGE LB LG LIVESWITH MONTH NAME NATIONALHERITAGE NATIONALITY NICKNAME OCCASION ORGNAME PADVERTISING PANTHOLOGIZATION PARCHIVALLOCATION PATTITUDES PAUTHORSHIP PCIRCULATION PCONTRACT PCOPYRIGHT PDEDICATION PEARNINGS PEDITIONS PFIRSTLITERARYACTIVITY PINFLUENCESHER PLACE PLACENAME PLASTLITERARYACTIVITY PLITERARYSCHOOLS PMANUSCRIPTHISTORY PMATERIALCONDITIONS PMODEOFPUBLICATION PMOTIVES PNONBOOKMEDIA PNONSURVIVAL POLITICALAFFILIATION PPERFORMANCE PPERIODICALPUBLICATION PPLACEOFPUBLICATION PPRESSRUN PPRICE PRARITIESFEATURESDECORATIONS PRELATIONSWITHPUBLISHER PSERIALIZATION PSEUDONYM PSUBMISSIONSREJECTIONS PTYPEOFPRESS QUOTE RACECOLOUR RBESTKNOWNWORK RDESTRUCTIONOFWORK REGION REMUNERATION RFICTIONALIZATION RLANDMARKTEXT RPENALTIES RRECOGNITIONNAME RRECOGNITIONS RRECOGNITIONVALUE RRESPONSES RS RSELFDESCRIPTION RSHEINFLUENCED RWRITINGMILESTONE SCHOLARNOTE SCHOOL SEASON SELFCONSTRUCTED SEPARATION SETTLEMENT SEXUALIDENTITY SIC SIGNIFICANTACTIVITY SOCALLED SUBJECT TCHARACTERIZATION TCHARACTERNAME TCHARACTERTYPEROLE TEXT TGENRE TGENREISSUE TIME TINTERTEXTUALITY TITLE TMOTIF TOPIC TPLOT TSETTINGDATE TSETTINGPLACE TTECHNIQUES TTHEMETOPIC TTONESTYLE TVOICENARRATION WEEK XREF YEAR
-  format		inline
