--- a/misc/scripts/xmlformat.conf
+++ b/misc/scripts/xmlformat.conf
@@ -7,7 +7,7 @@
 # http://www.kitebird.com/software/xmlformat/xmlformat.html
 
 # Block elements; these elements begin on a new line, and contain only element content (block elements and inline elements)
-AUTHORSUMMARY BIBCITS CHRONSTRUCT DATAITEM DATASTRUCT DATESTRUCT DIV0 DIV1 DIV2 DIV3 SHORTPROSE TEXTSCOPE BIOGRAPHY WRITING PRODUCTION RECEPTION TEXTUALFEATURES BIRTH DEATH CULTURALFORMATION PERSONNAME EDUCATION FAMILY FRIENDSASSOCIATES HEALTH INTIMATERELATIONSHIPS LEISUREANDSOCIETY LOCATION MARRIAGE POLITICS OCCUPATION OTHERLIFEEVENT VIOLENCE WEALTH WORKSCITED ORLANDOHEADER FILEDESC TITLESTMT PUBLICATIONSTMT REVISIONDESC RESPONSIBILITY
+AUTHORSUMMARY CHRONSTRUCT DATAITEM DATASTRUCT DATESTRUCT DIV0 DIV1 DIV2 DIV3 SHORTPROSE TEXTSCOPE BIOGRAPHY WRITING PRODUCTION RECEPTION TEXTUALFEATURES BIRTH DEATH CULTURALFORMATION PERSONNAME EDUCATION FAMILY FRIENDSASSOCIATES HEALTH INTIMATERELATIONSHIPS LEISUREANDSOCIETY LOCATION MARRIAGE POLITICS OCCUPATION OTHERLIFEEVENT VIOLENCE WEALTH WORKSCITED ORLANDOHEADER FILEDESC TITLESTMT PUBLICATIONSTMT REVISIONDESC RESPONSIBILITY
   format		block
   entry-break	1
   exit-break	1
@@ -17,7 +17,7 @@ AUTHORSUMMARY BIBCITS CHRONSTRUCT DATAITEM DATASTRUCT DATESTRUCT DIV0 DIV1 DIV2 
   wrap-length   0
 
 # Block elements; these mixed content elements begin on a new line, and contain both element content (block elements and inline elements) and text content
-CHRONPROSE CLASSISSUE CORR NATIONALITYISSUE P RACEANDETHNICITY RELIGION SEXUALITY MEMBER RELIGIOUSNAME ROYAL STYLED
+CHRONPROSE CLASSISSUE CORR MEMBER NATIONALITYISSUE P RACEANDETHNICITY RELIGION SEXUALITY RELIGIOUSNAME ROYAL STYLED
   format		block
   entry-break	1
   exit-break	1
@@ -27,7 +27,7 @@ CHRONPROSE CLASSISSUE CORR NATIONALITYISSUE P RACEANDETHNICITY RELIGION SEXUALIT
   wrap-length   0
 
 # Inline elements; these heading or heading-like elements begin on a new line, and contain only text content (treated as block elements to properly configure output)
-AUTHORITY BIBCIT DOCTITLE HEADING ITEM SOURCE SOURCEDESC STANDARD
+AUTHORITY DOCTITLE HEADING ITEM SOURCE SOURCEDESC STANDARD
   format		block
   entry-break	1
   exit-break	1
@@ -36,8 +36,18 @@ AUTHORITY BIBCIT DOCTITLE HEADING ITEM SOURCE SOURCEDESC STANDARD
   normalize		no
   wrap-length   0
 
+# Block elements; these inline-like block elements do not begin on a new line, and contain only element content (inline elements)
+BIBCITS
+  format		block
+  entry-break	0
+  exit-break	0
+  element-break	0
+  subindent     0
+  normalize     no
+  wrap-length   0
+
 # Inline elements; these elements do not begin on a new line, and contain only text content or other inline element content (treated as block elements to properly configure output)
-ADDRESS ADDRLINE AREA AWARD BIRTHNAME BIRTHPOSITION CAUSE CHILDLESSNESS CHILDREN CLASS COMPANION CONTESTEDBEHAVIOUR DATE DATERANGE DAY DEGREE DENOMINATION DIVORCE EMPH EMPLOYER ETHNICITY EXTENTOFOEUVRE FOREIGN GENERICRANGE GEOG GEOGHERITAGE GIVEN HEAD INDEXED INSTRUCTOR JOB KEYWORDCLASS L LANGUAGE LB LG LIVESWITH MARRIED MONTH NAME NATIONALHERITAGE NATIONALITY NICKNAME OCCASION ORGNAME PADVERTISING PANTHOLOGIZATION PARCHIVALLOCATION PATTITUDES PAUTHORSHIP PCIRCULATION PCONTRACT PCOPYRIGHT PDEDICATION PEARNINGS PEDITIONS PFIRSTLITERARYACTIVITY PINFLUENCESHER PLACE PLACENAME PLASTLITERARYACTIVITY PLITERARYSCHOOLS PMANUSCRIPTHISTORY PMATERIALCONDITIONS PMODEOFPUBLICATION PMOTIVES PNONBOOKMEDIA PNONSURVIVAL POLITICALAFFILIATION PPERFORMANCE PPERIODICALPUBLICATION PPLACEOFPUBLICATION PPRESSRUN PPRICE PRARITIESFEATURESDECORATIONS PRELATIONSWITHPUBLISHER PSERIALIZATION PSEUDONYM PSUBMISSIONSREJECTIONS PTYPEOFPRESS QUOTE RACECOLOUR RBESTKNOWNWORK RDESTRUCTIONOFWORK REGION REMUNERATION RESEARCHNOTE RFICTIONALIZATION RLANDMARKTEXT RPENALTIES RRECOGNITIONNAME RRECOGNITIONS RRECOGNITIONVALUE RRESPONSES RS RSELFDESCRIPTION RSHEINFLUENCED RWRITINGMILESTONE SCHOLARNOTE SCHOOL SEASON SELFCONSTRUCTED SEPARATION SETTLEMENT SEXUALIDENTITY SIC SIGNIFICANTACTIVITY SOCALLED SUBJECT SURNAME TCHARACTERIZATION TCHARACTERNAME TCHARACTERTYPEROLE TEXT TGENRE TGENREISSUE TIME TINTERTEXTUALITY TITLE TITLED TMOTIF TOPIC TPLOT TSETTINGDATE TSETTINGPLACE TTECHNIQUES TTHEMETOPIC TTONESTYLE TVOICENARRATION WEEK XREF YEAR
+ADDRESS ADDRLINE AREA AWARD BIBCIT BIRTHNAME BIRTHPOSITION CAUSE CHILDLESSNESS CHILDREN CLASS COMPANION CONTESTEDBEHAVIOUR DATE DATERANGE DAY DEGREE DENOMINATION DIVORCE EMPH EMPLOYER ETHNICITY EXTENTOFOEUVRE FOREIGN GENERICRANGE GEOG GEOGHERITAGE GIVEN HEAD INDEXED INSTRUCTOR JOB KEYWORDCLASS L LANGUAGE LB LG LIVESWITH MARRIED MONTH NAME NATIONALHERITAGE NATIONALITY NICKNAME OCCASION ORGNAME PADVERTISING PANTHOLOGIZATION PARCHIVALLOCATION PATTITUDES PAUTHORSHIP PCIRCULATION PCONTRACT PCOPYRIGHT PDEDICATION PEARNINGS PEDITIONS PFIRSTLITERARYACTIVITY PINFLUENCESHER PLACE PLACENAME PLASTLITERARYACTIVITY PLITERARYSCHOOLS PMANUSCRIPTHISTORY PMATERIALCONDITIONS PMODEOFPUBLICATION PMOTIVES PNONBOOKMEDIA PNONSURVIVAL POLITICALAFFILIATION PPERFORMANCE PPERIODICALPUBLICATION PPLACEOFPUBLICATION PPRESSRUN PPRICE PRARITIESFEATURESDECORATIONS PRELATIONSWITHPUBLISHER PSERIALIZATION PSEUDONYM PSUBMISSIONSREJECTIONS PTYPEOFPRESS QUOTE RACECOLOUR RBESTKNOWNWORK RDESTRUCTIONOFWORK REGION REMUNERATION RESEARCHNOTE RFICTIONALIZATION RLANDMARKTEXT RPENALTIES RRECOGNITIONNAME RRECOGNITIONS RRECOGNITIONVALUE RRESPONSES RS RSELFDESCRIPTION RSHEINFLUENCED RWRITINGMILESTONE SCHOLARNOTE SCHOOL SEASON SELFCONSTRUCTED SEPARATION SETTLEMENT SEXUALIDENTITY SIC SIGNIFICANTACTIVITY SOCALLED SUBJECT SURNAME TCHARACTERIZATION TCHARACTERNAME TCHARACTERTYPEROLE TEXT TGENRE TGENREISSUE TIME TINTERTEXTUALITY TITLE TITLED TMOTIF TOPIC TPLOT TSETTINGDATE TSETTINGPLACE TTECHNIQUES TTHEMETOPIC TTONESTYLE TVOICENARRATION WEEK XREF YEAR
   format		block
   entry-break	0
   exit-break	0
