Code modifications [MRB]

--- a/misc/scripts/xmlformat.conf
+++ b/misc/scripts/xmlformat.conf
@@ -1,57 +1,114 @@
 # MRB -- Fri 07-Mar-2014
 
-# Purpose: Configuration file for the Perl program xmlformat; defines
+# Purpose: Configuration file xmlformat.conf for the Perl program xmlformat.pl; defines
 # how Orlando elements should be formatted
 
-# xmlformat documentation can be found at 
+# Reference: xmlformat documentation can be found at 
 # http://www.kitebird.com/software/xmlformat/xmlformat.html
 
-# Block elements; these elements begin on a new line, and contain only element content (block elements and inline elements)
-AUTHORSUMMARY CHRONSTRUCT DATAITEM DATASTRUCT DATESTRUCT DIV0 DIV1 DIV2 DIV3 SHORTPROSE TEXTSCOPE BIOGRAPHY WRITING PRODUCTION RECEPTION TEXTUALFEATURES BIRTH DEATH CULTURALFORMATION PERSONNAME EDUCATION FAMILY FRIENDSASSOCIATES HEALTH INTIMATERELATIONSHIPS LEISUREANDSOCIETY LOCATION MARRIAGE POLITICS OCCUPATION OTHERLIFEEVENT VIOLENCE WEALTH WORKSCITED ORLANDOHEADER FILEDESC TITLESTMT PUBLICATIONSTMT REVISIONDESC RESPONSIBILITY
-  format		block
-  entry-break	1
-  exit-break	1
-  element-break	1
-  subindent		4
-  normalize		no
-  wrap-length   0
+# Notes:
+# * xmlformat recognizes three types of elements: block elements, inline elements, and verbatim
+# elements.  Several formatting properties can be controlled only for block elements, and thus
+# inline elements are classed as "block" elements in the configuration file so that they can
+# be styled appropriately.
+# * There are basically broad two types of formatted elements:
+#     (a) numbers 1, 2, and 3 below form one type, with the elements beginning on a new line,
+# and for numbers 1 and 2, child elements beginning on a new line and indented four spaces; and
+#     (b) numbers 4 and 5 below form another type, with the elements not beginning on a new
+# line, and for number 4, any child elements do not begin on a new line and are not indented.
+# * It is important that the normalize option value be set to "no" for each of the element
+# categories.  The document is normalized earlier in the process, when the script
+# xmlformat.sh normalizes and joins the document content by trimming trailing and leading
+# whitespaces (normalize), and then replaces end-of-line characters with a single blank
+# space (join).  By setting the normalize value to "no", the code in the program xmlformat.pl
+# can then appropriately process the text and whitespace nodes.
+# * Useful xmlformat configuration-related commands:
+# - To see the list of xmlformat command line options:
+#     perl xmlformat.pl --help
+# - To see the configuration file option directives (i.e., this file's configuration options):
+#     perl xmlformat.pl --show-config
+# - To see elements that are in a document but that have not been defined in the configuration
+#   file options:
+#     perl xmlformat.pl file_name --show-unconfigured-elements --config-file xmlformat.conf
+#   and to loop through files in a directory:
+#     for f in *; do perl xmlformat.pl "$f" --show-unconfigured-elements --config-file xmlformat.conf; done
 
-# Block elements; these mixed content elements begin on a new line, and contain both element content (block elements and inline elements) and text content
-CHRONPROSE CLASSISSUE CORR MEMBER NATIONALITYISSUE P RACEANDETHNICITY RELIGION SEXUALITY RELIGIOUSNAME ROYAL STYLED
-  format		block
-  entry-break	1
-  exit-break	1
-  element-break	1
-  subindent     4
-  normalize     no
-  wrap-length   0
+# (1) Block elements; these elements begin on a new line, and contain only element content
+# (block elements and inline elements)
+AUTHORSUMMARY BIOGRAPHY BIRTH CHRONSTRUCT CORR CULTURALFORMATION DATAITEM DATASTRUCT DATESTRUCT DEATH DIV0 DIV1 DIV2 DIV3 EDUCATION FAMILY FILEDESC FRIENDSASSOCIATES HEALTH INTIMATERELATIONSHIPS LEISUREANDSOCIETY LOCATION MARRIAGE MEMBER OCCUPATION ORLANDOHEADER OTHERLIFEEVENT PERSONNAME POLITICS PUBLICATIONSTMT PRODUCTION RECEPTION RESPONSIBILITY REVISIONDESC SHORTPROSE TEXTSCOPE TEXTUALFEATURES TITLESTMT VIOLENCE WEALTH WORKSCITED WRITING
+  format = block
+  entry-break = 1
+  element-break = 1
+  exit-break = 1
+  subindent = 4
+  normalize = no
+  wrap-length = 0
 
-# Inline elements; these heading or heading-like elements begin on a new line, and contain only text content (treated as block elements to properly configure output)
+# (2) Block elements; these mixed content block elements begin on a new line, and contain
+# both element content (block elements and inline elements) and text content
+CHRONPROSE CLASSISSUE NATIONALITYISSUE P RACEANDETHNICITY RELIGION SEXUALITY
+  format = block
+  entry-break = 1
+  element-break = 1
+  exit-break = 1
+  subindent = 4
+  normalize = no
+  wrap-length = 0
+
+# (3) Inline elements; these inline heading or heading-like elements begin on a new line,
+# and contain only text content (treated as block elements to properly configure output)
 AUTHORITY DOCTITLE HEADING ITEM SOURCE SOURCEDESC STANDARD
-  format		block
-  entry-break	1
-  exit-break	1
-  element-break	1
-  subindent		4
-  normalize		no
-  wrap-length   0
+  format = block
+  entry-break = 1
+  element-break = 1
+  exit-break = 1
+  subindent = 4
+  normalize = no
+  wrap-length = 0
 
-# Block elements; these inline-like block elements do not begin on a new line, and contain only element content (inline elements)
+# (4) Block elements; these inline-like block elements do not begin on a new line, and
+# contain only element content (inline elements)
 BIBCITS
-  format		block
-  entry-break	0
-  exit-break	0
-  element-break	0
-  subindent     0
-  normalize     no
-  wrap-length   0
+  format = block
+  entry-break = 0
+  element-break = 0
+  exit-break = 0
+  subindent = 0
+  normalize = no
+  wrap-length = 0
 
-# Inline elements; these elements do not begin on a new line, and contain only text content or other inline element content (treated as block elements to properly configure output)
-ADDRESS ADDRLINE AREA AWARD BIBCIT BIRTHNAME BIRTHPOSITION CAUSE CHILDLESSNESS CHILDREN CLASS COMPANION CONTESTEDBEHAVIOUR DATE DATERANGE DAY DEGREE DENOMINATION DIVORCE EMPH EMPLOYER ETHNICITY EXTENTOFOEUVRE FOREIGN GENERICRANGE GEOG GEOGHERITAGE GIVEN HEAD INDEXED INSTRUCTOR JOB KEYWORDCLASS L LANGUAGE LB LG LIVESWITH MARRIED MONTH NAME NATIONALHERITAGE NATIONALITY NICKNAME OCCASION ORGNAME PADVERTISING PANTHOLOGIZATION PARCHIVALLOCATION PATTITUDES PAUTHORSHIP PCIRCULATION PCONTRACT PCOPYRIGHT PDEDICATION PEARNINGS PEDITIONS PFIRSTLITERARYACTIVITY PINFLUENCESHER PLACE PLACENAME PLASTLITERARYACTIVITY PLITERARYSCHOOLS PMANUSCRIPTHISTORY PMATERIALCONDITIONS PMODEOFPUBLICATION PMOTIVES PNONBOOKMEDIA PNONSURVIVAL POLITICALAFFILIATION PPERFORMANCE PPERIODICALPUBLICATION PPLACEOFPUBLICATION PPRESSRUN PPRICE PRARITIESFEATURESDECORATIONS PRELATIONSWITHPUBLISHER PSERIALIZATION PSEUDONYM PSUBMISSIONSREJECTIONS PTYPEOFPRESS QUOTE RACECOLOUR RBESTKNOWNWORK RDESTRUCTIONOFWORK REGION REMUNERATION RESEARCHNOTE RFICTIONALIZATION RLANDMARKTEXT RPENALTIES RRECOGNITIONNAME RRECOGNITIONS RRECOGNITIONVALUE RRESPONSES RS RSELFDESCRIPTION RSHEINFLUENCED RWRITINGMILESTONE SCHOLARNOTE SCHOOL SEASON SELFCONSTRUCTED SEPARATION SETTLEMENT SEXUALIDENTITY SIC SIGNIFICANTACTIVITY SOCALLED SUBJECT SURNAME TCHARACTERIZATION TCHARACTERNAME TCHARACTERTYPEROLE TEXT TGENRE TGENREISSUE TIME TINTERTEXTUALITY TITLE TITLED TMOTIF TOPIC TPLOT TSETTINGDATE TSETTINGPLACE TTECHNIQUES TTHEMETOPIC TTONESTYLE TVOICENARRATION WEEK XREF YEAR
-  format		block
-  entry-break	0
-  exit-break	0
-  element-break	0
-  subindent     0
-  normalize     no
-  wrap-length   0
+# (5) Inline elements; these elements do not begin on a new line, and contain only text content
+# or other inline element content (treated as block elements to properly configure output)
+ADDRESS ADDRLINE AREA AWARD BIBCIT BIRTHNAME BIRTHPOSITION CAUSE CHILDLESSNESS CHILDREN CLASS COMPANION CONTESTEDBEHAVIOUR DATE DATERANGE DAY DEGREE DENOMINATION DIVORCE EMPH EMPLOYER ETHNICITY EXTENTOFOEUVRE FOREIGN GENERICRANGE GEOG GEOGHERITAGE GIVEN HEAD INDEXED INSTRUCTOR JOB KEYWORDCLASS L LANGUAGE LB LG LIVESWITH MARRIED MONTH NAME NATIONALHERITAGE NATIONALITY NICKNAME OCCASION ORGNAME PADVERTISING PANTHOLOGIZATION PARCHIVALLOCATION PATTITUDES PAUTHORSHIP PCIRCULATION PCONTRACT PCOPYRIGHT PDEDICATION PEARNINGS PEDITIONS PFIRSTLITERARYACTIVITY PINFLUENCESHER PLACE PLACENAME PLASTLITERARYACTIVITY PLITERARYSCHOOLS PMANUSCRIPTHISTORY PMATERIALCONDITIONS PMODEOFPUBLICATION PMOTIVES PNONBOOKMEDIA PNONSURVIVAL POLITICALAFFILIATION PPERFORMANCE PPERIODICALPUBLICATION PPLACEOFPUBLICATION PPRESSRUN PPRICE PRARITIESFEATURESDECORATIONS PRELATIONSWITHPUBLISHER PSERIALIZATION PSEUDONYM PSUBMISSIONSREJECTIONS PTYPEOFPRESS QUOTE RACECOLOUR RBESTKNOWNWORK RDESTRUCTIONOFWORK REGION RELIGIOUSNAME REMUNERATION RESEARCHNOTE RFICTIONALIZATION RLANDMARKTEXT ROYAL RPENALTIES RRECOGNITIONNAME RRECOGNITIONS RRECOGNITIONVALUE RRESPONSES RS RSELFDESCRIPTION RSHEINFLUENCED RWRITINGMILESTONE SCHOLARNOTE SCHOOL SEASON SELFCONSTRUCTED SEPARATION SETTLEMENT SEXUALIDENTITY SIC SIGNIFICANTACTIVITY SOCALLED STYLED SUBJECT SURNAME TCHARACTERIZATION TCHARACTERNAME TCHARACTERTYPEROLE TEXT TGENRE TGENREISSUE TIME TINTERTEXTUALITY TITLE TITLED TMOTIF TOPIC TPLOT TSETTINGDATE TSETTINGPLACE TTECHNIQUES TTHEMETOPIC TTONESTYLE TVOICENARRATION WEEK XREF YEAR
+  format = block
+  entry-break = 0
+  element-break = 0
+  exit-break = 0
+  subindent = 0
+  normalize = no
+  wrap-length = 0
+
+# (6) Default options; if there are any document elements that are not configured in this
+# configuration file, they will be formatted according to these options (kept default
+# built-in options that are set in the xmlformat.pl file, except changed subindent value
+# from "1" to "4")
+*DEFAULT
+  format = block
+  entry-break = 1
+  element-break = 1
+  exit-break = 1
+  subindent = 4
+  normalize = no
+  wrap-length = 0
+
+# (7) Document options; used to control line breaking between top-level nodes of the document,
+# such as the XML declaration, the root element, and any comments or processing instructions
+# (kept the default built-in options that are set in the xmlformat.pl file)
+*DOCUMENT
+  format = block
+  entry-break = 0
+  element-break = 1
+  exit-break = 1
+  subindent = 0
+  normalize = no
+  wrap-length = 0
