Code changes [MRB]

--- a/misc/scripts/xmlformat.conf
+++ b/misc/scripts/xmlformat.conf
@@ -11,7 +11,7 @@
 # elements.  Several formatting properties can be controlled only for block elements, and thus
 # inline elements are classed as "block" elements in the configuration file so that they can
 # be styled appropriately.
-# * There are basically broad two types of formatted elements:
+# * There are basically two broad types of formatted elements:
 #     (a) numbers 1, 2, and 3 below form one type, with the elements beginning on a new line,
 # and for numbers 1 and 2, child elements beginning on a new line and indented four spaces; and
 #     (b) numbers 4 and 5 below form another type, with the elements not beginning on a new
