--- a/migration/scripts/cwrc_object_download.config.sample
+++ b/migration/scripts/cwrc_object_download.config.sample
@@ -2,18 +2,18 @@
     "url_base":"https://example.ca",
     "object_sets":{
         "Orlando Person": {
-            "source_solr_query":"RELS_EXT_isMemberOfCollection_uri_mt:\"orlando%3ApersonEntityCollection\"?fl=PID&rows=999999&start=0&wt=json",
+            "source_solr_query":"RELS_EXT_isMemberOfCollection_uri_mt:\"orlando%3ApersonEntityCollection\"?fl=PID,RELS_EXT_hasModel_uri_s&rows=999999&start=0&wt=json",
             "destination_dir":"orlando%3ApersonEntityCollection",
             "dsid":"PERSON",
-            "cModel":"cwrc:person-entityCModel",
+            "cModel":"info:fedora/cwrc:person-entityCModel",
             "filename_regex_pattern":"/^([^:]+):(.+)$/i",
             "filename_regex_replacement":"${1}_${2}"
         },
         "Orlando Org": {
-            "source_solr_query":"RELS_EXT_isMemberOfCollection_uri_mt:\"orlando%3AorganizationEntityCollection\"?fl=PID&rows=999999&start=0&wt=json",
+            "source_solr_query":"RELS_EXT_isMemberOfCollection_uri_mt:\"orlando%3AorganizationEntityCollection\"?fl=PID,RELS_EXT_hasModel_uri_s&rows=999999&start=0&wt=json",
             "destination_dir":"orlando%3AorganizationEntityCollection",
             "dsid":"ORGANIZATION",
-            "cModel":"cwrc:organization-entityCModel",
+            "cModel":"info:fedora/cwrc:organization-entityCModel",
             "filename_regex_pattern":"/^([^:]+):(.+)$/i",
             "filename_regex_replacement":"${1}_${2}"
         }
